SERVER-26107 Improve logging around sharding metadata refresh in MetadataManager